feat: add mediator and dto handler
